--- a/index.html
+++ b/index.html
@@ -9,12 +9,23 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <main id = "main-doc">
-      <section id = "main-section"></section>
-      <section id = "main-section"></section>
-      <section id = "main-section"></section>
-      <section id = "main-section"></section>
-      <section id = "main-section"></section>
+      <section class = "main-section" id="summary">
+        <header>Summary</header>
+      </section>
+      <section class = "main-section" id="syntax">
+        <header>Syntax</header>
+      </section>
+      <section class = "main-section" id="description">
+        <header>Descripttion</header>
+      </section>
+      <section class = "main-section" id="examples">
+        <header>Examples</header>
+      </section>
+      <section class = "main-section" id="polyfill">
+        <header>Polyfill</header>
+      </section>
     </main>
+
     <script  src="js/index.js"></script>
   </body>
 </html>
