--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <code>
           const array1 = [1, 2, 3, 4];<br>
           const reducer = (accumulator, currentValue) => accumulator + currentValue;<br>
-          
+
           // 1 + 2 + 3 + 4<br>
           console.log(array1.reduce(reducer));<br>
           // expected output: 10<br>
-          
+
           // 5 + 1 + 2 + 3 + 4<br>
           console.log(array1.reduce(reducer, 5));<br>
           // expected output: 15<br>
@@ -39,9 +39,24 @@
     </section>
     <section class="main-section" id="syntax">
       <header>Syntax</header>
+      <p><i>arr.reduce(callback(accumulator, currentValue[, index[, array]])[, initialValue])</i></p>
+      <h3>Parameters</h3>
+      <i><strong>callback</strong></i>
+      <p>A function to execute on each element in the array (except for the first, if no <i>initialValue</i> is supplied), taking four arguments:</p>
+      <i><strong>accumulator</strong></i>
+      <p>The accumulator accumulates the callback's return values. It is the accumulated value previously returned in the last invocation of the callback, or <i>initialValue</i>, if supplied (see below).</p>
+      <i><strong>currentValue</strong></i>
+      <p>The current element being processed in the array.</p>
+      <i><strong>index</strong></i> || Optional
+      <p>The index of the current element being processed in the array. Starts from index 0 if an <i>initialValue</i> is provided. Otherwise, starts from index 1.</p>
+      <i><strong>array</strong></i> || Optional
+      <p>The array reduce() was called upon.</p>
+      <i><strong>initialValue</strong></i> || Optional
+      <p>A value to use as the first argument to the first call of the <i>callback</i>. If no <i>initialValue</i>  is supplied, the first element in the array will be used and skipped. Calling <i>reduce()</i>  on an empty array without an <i>initialValue</i> will throw a <i>TypeError</i>.</p>
     </section>
     <section class="main-section" id="description">
       <header>Descripttion</header>
+      <p></p>
     </section>
     <section class="main-section" id="examples">
       <header>Examples</header>
