--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <a href="#description" class="nav-link">Description</a>
     </header>
     <header>
-       <a href="#exaples" class="nav-link">Examples</a>
+       <a href="#examples" class="nav-link">Examples</a>
     </header>
     <header>
       <a href="#polyfill" class="nav-link">Polyfill </a>
